--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -1,5 +1,3 @@
-.demo form { float: left; margin-bottom: 15px; width: 200px }
-
 .demo label { color: #222; font-size: 1.7em; letter-spacing: .7px; margin-left: 3px }
 
 .demo input,
@@ -23,4 +21,10 @@
 
 /* Custom */
 
+.demo form { float: left; margin-bottom: 15px; width: 255px }
+.demo form#required-demo { width: 200px }
+
 .demo { float: left; margin-top: 20px }
+
+.demo .button { background-color: #F5F5F5; border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #B3B3B3; border-radius: 4px; border-style: solid; border-width: 1px; cursor: pointer; float: right; font-size: 1.4em; padding: 4px 12px }
+.demo .button:hover, .demo .button:focus { background-color: #F9F9F9; transition: color 0s ease 0s, background .2s ease-in 0s }
