--- a/lib/jquery.validaty.css
+++ b/lib/jquery.validaty.css
@@ -1,6 +1,7 @@
 @CHARSET "UTF-8";
 
-.validaty .invalid { border: 1px solid #F00 }
+.validaty .invalid { border: 1px solid #C00 }
+.validaty .valid { border: 1px solid #0C0 }
 
 .validaty-balloon { cursor: help; opacity: 0; position: absolute }
 .validaty-balloon ul { background-color: #444; opacity: .8; border-radius: 5px; list-style: none; margin: 0; padding: 4px 10px }
