--- a/demo/css/common.css
+++ b/demo/css/common.css
@@ -9,7 +9,8 @@ footer { font-size: 1.3em; margin: 0 auto; overflow: auto; padding-bottom: 15px;
 h2 { border-bottom: 1px solid #DEDEDE; clear: right; color: #444; font-size: 2.6em; letter-spacing: .5px; line-height: 1.3em; padding-bottom: 3px }
 h2 a { color: #444 }
 
-h3 { color: #555; font-size: 1.6em; letter-spacing: .5px; }
+h3 { color: #777; font-size: 1.8em; letter-spacing: .4px; margin-bottom: 0 }
+h3 a { color: #666 }
 
 ul { margin-left: 0; padding-left: 22px }
 ul li { font-size: 1.3em }
