--- a/demo/css/common.css
+++ b/demo/css/common.css
@@ -63,7 +63,7 @@ header nav li a.download:hover { background-color: #E3D070 }
 .author .social { display: inline-block; width: 2%; vertical-align: middle }
 .author .social a { background-color: #EEE; background-repeat: no-repeat; border-radius: 3px; display: block; height: 16px; margin-bottom: 5px; width: 16px }
 .author .social a:last-child { margin-bottom: 0 }
-.author .social a.facebook { background-image: url('http://wbotelhos.com/images/facebook.png') }
-.author .social a.github { background-image: url('http://wbotelhos.com/images/github.png') }
-.author .social a.linkedin { background-image: url('http://wbotelhos.com/images/linkedin.png') }
-.author .social a.twitter { background-image: url('http://wbotelhos.com/images/twitter.png') }
+.author .social a.facebook { background-color: #95bdd4 }
+.author .social a.github { background-color: #95bdd4 }
+.author .social a.linkedin { background-color: #95bdd4 }
+.author .social a.twitter { background-color: #95bdd4 }
